Grid not appearing correctly at low clip start in 2.8 #58918

Closed
opened 2018-12-07 09:58:48 +01:00 by Steven Ujvari · 14 comments

System Information
Windows 8.1 Pro
Intel Core i7 4790k
NVIDIA gtx1080

Blender Version
2.80-606223f6a61-win64

Short description of error
The grid of the 3D view port seems to not display correctly at distances with certain view clip values.untitled.mp4

**System Information** Windows 8.1 Pro Intel Core i7 4790k NVIDIA gtx1080 **Blender Version** 2.80-606223f6a61-win64 **Short description of error** The grid of the 3D view port seems to not display correctly at distances with certain view clip values.[untitled.mp4](https://archive.blender.org/developer/F5867805/untitled.mp4)
Author

Added subscriber: @T3k

Added subscriber: @T3k

#59857 was marked as duplicate of this issue

#59857 was marked as duplicate of this issue

#59887 was marked as duplicate of this issue

#59887 was marked as duplicate of this issue

#59378 was marked as duplicate of this issue

#59378 was marked as duplicate of this issue

#58939 was marked as duplicate of this issue

#58939 was marked as duplicate of this issue

Added subscribers: @fclem, @ZedDB

Added subscribers: @fclem, @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2018-12-07 10:32:56 +01:00

This is just how clipping values work. If you have a low near clipping value and a high far value, there will be issues on objects far away from the camera. There is no getting away from that.

@fclem I'm guessing you agree?

This is just how clipping values work. If you have a low near clipping value and a high far value, there will be issues on objects far away from the camera. There is no getting away from that. @fclem I'm guessing you agree?

@ZedDB that is correct. Although I would like to increase precision a bit, this is not trivial.

@ZedDB that is correct. Although I would like to increase precision a bit, this is not trivial.

Added subscriber: @revenmoore

Added subscriber: @revenmoore

Added subscriber: @ljonya

Added subscriber: @ljonya

Added subscriber: @DeepakV

Added subscriber: @DeepakV

Added subscribers: @nicholas132, @rboxman

Added subscribers: @nicholas132, @rboxman

This issue was referenced by b5bc2158a0

This issue was referenced by b5bc2158a07140e5463e209839bcf36d2ce2cddc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58918
No description provided.